[gd_scene load_steps=93 format=2]

[ext_resource path="res://Characters/Maria/TestCharacter.gd" type="Script" id=2]
[ext_resource path="res://Characters/Shared/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Shared/BulletSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/StatusIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Characters/Maria/mariaspritesheet_v001.png" type="Texture" id=6]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.605, 0.175, 1.14 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 101 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=51]
resource_name = "ability_d"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 82, 83, 84, 85, 86, 87, 88 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.416667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activate_ability"
} ]
}

[sub_resource type="Animation" id=47]
resource_name = "ability_u"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.416667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activate_ability"
} ]
}

[sub_resource type="Animation" id=46]
resource_name = "death"
length = 1.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 26, 26, 26, 26, 26, 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_alive"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_d"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112 ]
}

[sub_resource type="Animation" id=19]
resource_name = "idle_u"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64 ]
}

[sub_resource type="Animation" id=49]
resource_name = "roll_d"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 74, 75, 76, 77, 78, 79, 80 ]
}

[sub_resource type="Animation" id=50]
resource_name = "roll_lr"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=48]
resource_name = "roll_u"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=18]
resource_name = "run_d"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68, 69, 70, 71, 72 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_lr"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=24]
resource_name = "run_u"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43 ]
}

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "ability_d"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "ability_u"

[sub_resource type="AnimationNodeAnimation" id=94]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle_d"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idle_u"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "roll_d"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "roll_lr"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "roll_u"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "run_d"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "run_lr"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "run_u"

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=73]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=74]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=75]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=76]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=77]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=78]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]

[sub_resource type="AnimationNodeStateMachineTransition" id=83]

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=85]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachineTransition" id=87]

[sub_resource type="AnimationNodeStateMachineTransition" id=88]

[sub_resource type="AnimationNodeStateMachineTransition" id=89]

[sub_resource type="AnimationNodeStateMachineTransition" id=90]

[sub_resource type="AnimationNodeStateMachineTransition" id=91]

[sub_resource type="AnimationNodeStateMachineTransition" id=92]

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachineTransition" id=96]

[sub_resource type="AnimationNodeStateMachineTransition" id=97]

[sub_resource type="AnimationNodeStateMachineTransition" id=98]

[sub_resource type="AnimationNodeStateMachineTransition" id=99]

[sub_resource type="AnimationNodeStateMachineTransition" id=100]

[sub_resource type="AnimationNodeStateMachineTransition" id=101]

[sub_resource type="AnimationNodeStateMachineTransition" id=102]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=9]
states/ability_d/node = SubResource( 53 )
states/ability_d/position = Vector2( 446.219, 417 )
states/ability_u/node = SubResource( 52 )
states/ability_u/position = Vector2( 420.219, -72 )
states/death/node = SubResource( 94 )
states/death/position = Vector2( 70.7995, 389 )
states/idle_d/node = SubResource( 20 )
states/idle_d/position = Vector2( 106.219, 117 )
states/idle_u/node = SubResource( 25 )
states/idle_u/position = Vector2( 111.219, 193 )
states/roll_d/node = SubResource( 70 )
states/roll_d/position = Vector2( 1135, 547.438 )
states/roll_lr/node = SubResource( 71 )
states/roll_lr/position = Vector2( 794, 536.438 )
states/roll_u/node = SubResource( 72 )
states/roll_u/position = Vector2( 1239, 333.438 )
states/run_d/node = SubResource( 26 )
states/run_d/position = Vector2( 895, 193 )
states/run_lr/node = SubResource( 21 )
states/run_lr/position = Vector2( 895, 98 )
states/run_u/node = SubResource( 27 )
states/run_u/position = Vector2( 895, 6 )
transitions = [ "idle_d", "run_lr", SubResource( 22 ), "run_lr", "idle_d", SubResource( 23 ), "idle_d", "run_u", SubResource( 28 ), "run_u", "idle_d", SubResource( 29 ), "idle_d", "run_d", SubResource( 30 ), "run_d", "idle_d", SubResource( 31 ), "idle_u", "run_u", SubResource( 32 ), "run_u", "idle_u", SubResource( 33 ), "run_lr", "idle_u", SubResource( 34 ), "idle_u", "run_lr", SubResource( 35 ), "idle_u", "run_d", SubResource( 36 ), "run_d", "idle_u", SubResource( 37 ), "run_d", "run_lr", SubResource( 38 ), "run_lr", "run_d", SubResource( 39 ), "run_lr", "run_u", SubResource( 40 ), "run_u", "run_lr", SubResource( 41 ), "run_u", "run_d", SubResource( 42 ), "run_d", "run_u", SubResource( 43 ), "idle_d", "idle_u", SubResource( 44 ), "idle_u", "idle_d", SubResource( 45 ), "ability_u", "idle_d", SubResource( 54 ), "idle_d", "ability_u", SubResource( 55 ), "run_u", "ability_u", SubResource( 57 ), "run_lr", "ability_u", SubResource( 59 ), "run_d", "ability_u", SubResource( 61 ), "ability_d", "idle_u", SubResource( 62 ), "idle_u", "ability_d", SubResource( 63 ), "run_u", "ability_d", SubResource( 65 ), "run_d", "ability_d", SubResource( 67 ), "run_lr", "ability_d", SubResource( 69 ), "roll_u", "idle_d", SubResource( 73 ), "roll_u", "idle_u", SubResource( 74 ), "roll_lr", "idle_d", SubResource( 75 ), "roll_d", "idle_d", SubResource( 76 ), "roll_lr", "idle_u", SubResource( 77 ), "roll_d", "idle_u", SubResource( 78 ), "idle_d", "roll_u", SubResource( 79 ), "idle_d", "roll_lr", SubResource( 80 ), "idle_d", "roll_d", SubResource( 81 ), "idle_u", "roll_d", SubResource( 82 ), "idle_u", "roll_lr", SubResource( 83 ), "idle_u", "roll_u", SubResource( 84 ), "run_d", "roll_u", SubResource( 85 ), "run_d", "roll_lr", SubResource( 86 ), "run_d", "roll_d", SubResource( 87 ), "run_lr", "roll_u", SubResource( 88 ), "run_lr", "roll_lr", SubResource( 89 ), "run_lr", "roll_d", SubResource( 90 ), "run_u", "roll_u", SubResource( 91 ), "run_u", "roll_lr", SubResource( 92 ), "run_u", "roll_d", SubResource( 93 ), "idle_u", "death", SubResource( 95 ), "idle_d", "death", SubResource( 96 ), "ability_d", "death", SubResource( 97 ), "run_d", "death", SubResource( 98 ), "run_lr", "death", SubResource( 99 ), "run_u", "death", SubResource( 100 ), "ability_u", "death", SubResource( 101 ), "death", "idle_d", SubResource( 102 ) ]
start_node = "idle_d"
graph_offset = Vector2( 189.014, 1.45129 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 1.08064, 1 )

[sub_resource type="ViewportTexture" id=16]
flags = 2
viewport_path = NodePath("Node2D/Viewport")

[node name="Calliope" type="KinematicBody"]
collision_layer = 2
collision/safe_margin = 1.0
script = ExtResource( 2 )
dex = 1.4
weap_damage_min = 5
weap_damage_max = 15

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.047211, 0 )
shape = SubResource( 11 )
disabled = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )
cast_shadow = 0
generate_lightmap = false
billboard = 1
render_priority = 1
texture = ExtResource( 6 )
hframes = 12
vframes = 12
frame = 101

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite3D")
anims/RESET = SubResource( 17 )
anims/ability_d = SubResource( 51 )
anims/ability_u = SubResource( 47 )
anims/death = SubResource( 46 )
anims/idle_d = SubResource( 2 )
anims/idle_u = SubResource( 19 )
anims/roll_d = SubResource( 49 )
anims/roll_lr = SubResource( 50 )
anims/roll_u = SubResource( 48 )
anims/run_d = SubResource( 18 )
anims/run_lr = SubResource( 4 )
anims/run_u = SubResource( 24 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.02493, 0, 0, 0, 1, 0, 0, 0, 0.650145, 0, 0, 0 )
collision_layer = 2
collision_mask = 132

[node name="CollisionShape" parent="HitBox" index="0"]
transform = Transform( 0.643798, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 12 )
disabled = true

[node name="Shadow" type="Sprite3D" parent="."]
transform = Transform( 1.6, 0, 0, 0, -6.99382e-08, -1.6, 0, 1.6, -6.99382e-08, 0, -1.18144, 0 )
modulate = Color( 0, 0, 0, 1 )
shaded = true
alpha_cut = 2

[node name="Spawner" parent="." instance=ExtResource( 4 )]
spread_angle = 0.0
bullet_speed_override = 50.0

[node name="ShootTimer" type="Timer" parent="."]

[node name="TurretGroup" type="Node" parent="."]

[node name="AbilityCooldown" type="Timer" parent="."]
one_shot = true

[node name="Node2D" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="Quad" parent="Node2D" index="1"]
texture = SubResource( 16 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="AbilityCooldown" to="." method="_on_AbilityCooldown_timeout"]

[editable path="HitBox"]
[editable path="Spawner"]
[editable path="Node2D"]
